infra/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: central-oondemand-backend
  namespace: central-oondemand
spec:
  replicas: 1
  selector:
    matchLabels:
      app: central-oondemand-backend
  template:
    metadata:
      labels:
        app: central-oondemand-backend
    spec:
      containers:
        - name: central-oondemand-backend-container
          image: ghcr.io/oondemand/central-oondemand-backend:${IMAGE_TAG}
          ports:
            - containerPort: 4000
          resources:
            requests:
              memory: "128Mi"
              cpu: "0.1"
            limits:
              memory: "256Mi"
              cpu: "0.2"
