infra/kubernetes/service-homolog.yaml
apiVersion: v1
kind: Service
metadata:
  name: cst-multimoedas-backend-homolog-service
  namespace: cst-multimoedas-homolog
spec:
  type: NodePort
  selector:
    app: cst-multimoedas-backend-homolog
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4000
