infra/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cst-multimoedas-backend-service
  namespace: cst-multimoedas
spec:
  type: NodePort
  selector:
    app: cst-multimoedas-backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4000
