infra/kubernetes/ingress-homolog.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cst-multimoedas-backend-homolog-ingress
  namespace: cst-multimoedas-homolog
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - homolog.api.app1.central.oondemand.online
      secretName: app-tls
  rules:
    - host: homolog.api.app1.central.oondemand.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cst-multimoedas-backend-homolog-service
                port:
                  number: 80
